force-app/main/default/objects/Feedback__c/fields/Agent_Followed_Up__c.field-meta.xml
<CustomField>
    <fullName>Agent_Followed_Up__c</fullName>
    <label>Agent Followed Up</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>