force-app/main/default/objects/Feedback__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>App</fullName><default>false</default><label>App</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>Call</fullName><default>false</default><label>Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Survey</fullName><default>false</default><label>Survey</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>