force-app/main/default/objects/Feedback__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
</CustomField>