force-app/main/default/objects/Feedback__c/fields/Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Family_Member__c</fullName>
    <label>Family Member</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
</CustomField>