force-app/main/default/objects/Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CSAT</fullName><default>false</default><label>CSAT</label></value>
            <value><fullName>NPS</fullName><default>false</default><label>NPS</label></value>
            <value><fullName>Complaint</fullName><default>false</default><label>Complaint</label></value>
            <value><fullName>Compliment</fullName><default>false</default><label>Compliment</label></value>
            <value><fullName>Suggestion</fullName><default>false</default><label>Suggestion</label></value>
            <value><fullName>Claim Experience</fullName><default>false</default><label>Claim Experience</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>