force-app/main/default/objects/Feedback__c/fields/Related_Policy__c.field-meta.xml
<CustomField>
    <fullName>Related_Policy__c</fullName>
    <label>Related Policy</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
</CustomField>