force-app/main/default/objects/Feedback__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Positive</fullName><default>false</default><label>Positive</label></value>
            <value><fullName>Neutral</fullName><default>false</default><label>Neutral</label></value>
            <value><fullName>Negative</fullName><default>false</default><label>Negative</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>