force-app/main/default/objects/Feedback__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>In Review</fullName><default>false</default><label>In Review</label></value>
            <value><fullName>Actioned</fullName><default>false</default><label>Actioned</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>