force-app/main/default/objects/Feedback__c/fields/Triggered_Retention_Action__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Retention_Action__c</fullName>
    <label>Triggered Retention Action</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>